# robotics_project

./: .gitignore  1p1s_2cpu_pinned_dec17.txt  1p1s_2cpu_pinned_pubL_dec17.txt  1p1s_2cpu_unpinned_pubL_dec14.txt  1p1s_2cpu_unpinned_subL_dec14.txt  README.md  aggregate_vals.py  change_cam_Freq.py  change_nav2d_freqs.py  change_obj_speed.py  check_nav2d_expt.py  exp3_empty.world  get_results.py  haar_detector.py  illixr_dag.py  illixr_dag.txt  kill_nav2d_Script.sh  measure.py  measure_actual_freq.py  measure_cpu.py  measure_cpu_objtrack.py  nav2d_75p_small_dag.txt  nav2d_75p_test_dag.txt  nav2d_95p_small_dag.txt  nav2d_avg_small_dag.txt  nav2d_dag.txt  nav2d_final_small_dag.txt  nav2d_small_dag.txt  nav2d_yolo_dag.txt  new_sq_path_world.txt  plot_1core_relwork.py  plot_cdf.py  plot_cpu_util.py  plot_dummy_graphs.py  plot_dummy_n1_latency.py  plot_graphs.py  plot_lmap_data.py  plot_n1_latency.py  plot_n1_latency_buffsz.py  plot_n2_latency.py  (+26 more)
2Node/1c/: 1p1s_1cpu_dec20.txt
2Node/2c/: 1p1s_2cpu_unpinned_dec14.txt
2Node/2cPin/: 1p1s_2cpu_pinned_subL_dec17.txt
NodeChain_3N/1c/: 1p1s_1c_3N_chatter1_dec25.txt  1p1s_1c_3N_chatter_dec25.txt  1p1s_PUB_1c_3N.txt
NodeChain_3N/2c/: 1p1s_2c_3N_chatter1_dec25.txt  1p1s_2c_3N_chatter_dec25.txt  1p1s_PUB_2c_3N.txt  3N_2cNew_listener1_dec25.txt  3N_2cNew_listener_dec25.txt  PUB_3N_2cNew.txt
NodeChain_3N/3c/: 1p1s_3c_3N_chatter1_dec25.txt  1p1s_3c_3N_chatter_dec25.txt  1p1s_PUB_3c_3N.txt
davare_code/: davare_migp.py  run_nav_sim_fifo.sh
default_nav2d/: run_nav_simDef.sh
default_nav2d/costmap_2d/include/costmap_2d/: costmap_2d.h  costmap_2d_ros.h  obstacle_layer.h
default_nav2d/costmap_2d/plugins/: obstacle_layer.cpp  voxel_layer.cpp
default_nav2d/costmap_2d/src/: costmap_2d.cpp  costmap_2d_ros.cpp
default_nav2d/nav2d_karto/include/nav2d_karto/: MultiMapper.h
default_nav2d/nav2d_karto/src/: MapperNode.cpp  MultiMapper.cpp  PostProcessMapperNode.cpp
default_nav2d/nav2d_navigator/src/: RobotNavigator.cpp
default_nav2d/nav2d_operator/msg/: cmd.msg
default_nav2d/nav2d_operator/src/: RobotOperator.cpp  node.cpp
default_nav2d/nav2d_tutorials/launch/: tutorial4_robot2.launch  tutorial4_stage_noobst.launch  tutorial4_stage_smallmap.launch
default_nav2d/nav2d_tutorials/param/: costmap.yaml  mapper.yaml  navigator.yaml  operator.yaml
default_nav2d/nav2d_tutorials/world/: tutorial4.world  tutorial4_largemap.world  tutorial4_noobst.world  tutorial4_smallmap.world
maps/: mapFull.pgm  mapFull.yaml
micaela_multi_rate_dag/: MultiRateDags_Inputs.odt
micaela_multi_rate_dag/nav2d_karto/src/: MapperNode.cpp  MultiMapper.cpp
micaela_multi_rate_dag/nav2d_navigator/src/: RobotNavigator.cpp  navigator.cpp
micaela_multi_rate_dag/nav2d_operator/msg/: cmd.msg
micaela_multi_rate_dag/nav2d_operator/src/: RobotOperator.cpp  node.cpp
micaela_multi_rate_dag/nav2d_tutorials/launch/: op_nav_map.launch  rviz.launch  stage.launch  tutorial1.launch  tutorial2_nodes.launch  tutorial4_new.launch  tutorial4_obstacles.launch  tutorial4_robot.launch  tutorial4_rviz.launch  tutorial_nodes_only.launch  tutorial_stage.launch  tutorial_stage_oper.launch  tutorial_stage_oper_mapper.launch
micaela_multi_rate_dag/nav2d_tutorials/param/: costmap.yaml  costmap_tb3.yaml  mapper.yaml  navigator.yaml  operator.yaml
micaela_multi_rate_dag/nav2d_tutorials/world/: minirobot.inc  tutorial.world
micaela_multi_rate_dag/src/: main.cpp
micaela_multi_rate_dag/src/Evaluation/: Evaluation.cpp
micaela_multi_rate_dag/src/MultiRate/: MultiRateTaskset.cpp
micaela_multi_rate_dag/src/VariableTaskSet/: VariableTaskSet.cpp
scheduler_plugin/: .gitignore  Makefile  changes.md  plugin.cpp
scheduler_plugin/common/: common.mk
src/beginner_tutorials/: CMakeLists.txt  dag.h  dag_baseline.h  dag_controller_be.h  dag_controller_fe.h  dag_mc.h  dag_multi_core_approx.h  fusion_p.h  mosek.h  package.xml
src/beginner_tutorials/cfg/: BinSize.cfg
src/beginner_tutorials/src/: BaseModel.os  Debug.os  IntMap.os  SolverInfo.os  StringBuffer.os  cam_preprocess_node.cpp  controller_node.cpp  dag.cpp  dag_baseline.cpp  dag_controller_be.cpp  dag_controller_be_original.cpp  dag_controller_node.cpp  dag_mc.cpp  dag_multi_core_approx.cpp  dummy_subscriber.cpp  fusion.cc  globalcmp_td.cpp  local_planner.cpp  mosektask.os  new_controller_node.cpp  obj_detector.cpp  obj_tracker.cpp  old_publisher.cpp  publisher.cpp  sched_stuff.cpp  shim_freq_node.cpp  shim_stream_node.cpp  subscriber.cpp
src/darknet_ros/: CMakeLists.txt
src/darknet_ros/include/: YoloObjectDetector.hpp
src/darknet_ros/src/: YoloObjectDetector.cpp  yolo_object_detector_node.cpp
src/gazebo_animatedbox/: animated_box.cc
src/gazebo_ros_pkgs_updated/: gazebo_ros_camera_utils.h
src/gazebo_ros_pkgs_updated/cfg/: GazeboRosCamera.cfg
src/gazebo_ros_pkgs_updated/src/: gazebo_ros_camera.cpp  gazebo_ros_camera_utils.cpp
src/geometry/: transform_listener.h
src/geometry2/: transform_listener.h
src/navigation_2d/nav2d_karto/: CMakeLists.txt  package.xml
src/navigation_2d/nav2d_navigator/: CMakeLists.txt
src/navigation_2d/nav2d_operator/: CMakeLists.txt
src/rbx/: CMakeLists.txt  package.xml
src/rbx/src/: measure_rbx_perf.py  move_dynamic_obst_special.py  move_dynamic_obstacles_nav2d.py
src/rbx_object_track/: CMakeLists.txt  package.xml
src/rbx_object_track/msg/: roi_time.msg
src/rbx_object_track/src/: measure_rbx_perf.py  obj_detector.py  object_tracker2.py  preprocess_img.py  ros2opencv2.py  test_publisher.py  test_subscriber.py
src/ros_comm_updated/roscpp_include_ros/: common.h.in  node_handle.h  poll_manager.h  subscribe_options.h  subscription.h  subscription_queue.h  subscription_queue_dag.h  timer_manager.h  topic_manager.h
src/ros_comm_updated/roscpp_src_libros/: node_handle.cpp  poll_manager.cpp  publication.cpp  spinner.cpp  subscription.cpp  subscription_queue.cpp  subscription_queue_frac.cpp  topic_manager.cpp
src/stageros/: CMakeLists.txt  package.xml  stageros.cpp
src/turtlebot3_simulations/turtlebot3_gazebo/: turtlebot3_newhouse1.world
(+132 files in other folders)
