<package>
  <name>rbx</name>
  <version>0.4.0</version>

  <description>ROS PY</description>

  <maintainer email="aditi741997@gmail.com">Aditi</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rbx1_apps</url>
  <url type="bugtracker">https://github.com/pirobot/rbx1/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <export>

  </export>
</package>
